--- a/Password-validator/package.json
+++ b/Password-validator/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "form-submission",
+  "name": "Password-validator",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +9,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "validator": "^13.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
